crates/rome_formatter/tests/specs/prettier/objects/expand.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: expand.js

---
# Input
```js
const Component1 = ({ props }) => (
  <Text>Test</Text>
);

const Component2 = ({
  props
}) => (
  <Text>Test</Text>
);

```

# Output
```js
const Component1 = ({ props }) => (
  <Text>Test</Text>
);

const Component2 = ({
  props
}) => (
  <Text>Test</Text>
);

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ expand.js:2:3
  │
2 │   <Text>Test</Text>
  │   ^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
  ┌─ expand.js:2:14
  │
2 │   <Text>Test</Text>
  │             -^ But this operator was encountered instead
  │             │ 
  │             This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
  ┌─ expand.js:3:1
  │
3 │ );
  │ ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ expand.js:8:3
  │
8 │   <Text>Test</Text>
  │   ^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
  ┌─ expand.js:8:14
  │
8 │   <Text>Test</Text>
  │             -^ But this operator was encountered instead
  │             │ 
  │             This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
  ┌─ expand.js:9:1
  │
9 │ );
  │ ^ Expected an expression here


```


